# TDD_function_generator

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: gcc-arm-none-eabi.cmake  gcc-x86.cmake
inc/: main.h
include/: AD9833_driver.h  main.h  stm32f3xx_it.h
source/: AD9833_driver.c  main.c  system_stm32f3xx.c
src/: main.c  stm32f3xx_it.c
test/: AD9833_test.cpp  CMakeLists.txt
